[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "bumpversion",
]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter_cadquery"
version = "3.5.2"
description = "An extension to render cadquery objects in JupyterLab via pythreejs"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Bernhard Walter", email = "b_walter@arcor.de" }
]
keywords = ["ipython", "jupyter", "widgets", "CAD", "cadquery"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

dependencies = [
    "webcolors~=1.12",
    "voila~=0.3.5",
    "numpy-quaternion>=2022.4.1",
    "cad-viewer-widget~=1.4.0",
    "cachetools~=5.2.0",
]

[project.optional-dependencies]
dev = [
    "jupyter-packaging",
    "cookiecutter",
    "twine",
    "bumpversion",
    "black",
    "pylint",
    "pyYaml",
]
prod = [
    "cadquery @ git+https://github.com/CadQuery/cadquery@master",
]

[project.urls]
Homepage = "https://github.com/bernhard-42/jupyter-cadquery"
Issues = "https://github.com/bernhard-42/jupyter-cadquery/issues"

[project.scripts]
jcv = "jcv"
jcv_cmd = "jcv.cmd"

# [tool.setuptools]
# packages = ["jupyter_cadquery"]
# package-dir = {"" = "jupyter_cadquery"}

[tool.setuptools.packages.find]
where = ["jupyter_cadquery"]

[tool.bumpversion]
current_version = "3.5.2"
commit = false
tag = false

[tool.bumpversion.part.release]
optional_value = "final"
values = ["beta", "rc", "final"]

[tool.bumpversion.file]
"setup.py" = { parse = "version = (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\D*)(?P<build>\\d*)" }
"jupyter_cadquery/_version.py" = { parse = "__version__ = (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\D*)(?P<build>\\d*)" }
"README.md" = { parse = "jupyter-cadquery.{1:2}(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\D*)(?P<build>\\d*)" }
"docker/Dockerfile" = { parse = "jupyter-cadquery=(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\D*)(?P<build>\\d*)" }
"environment.yml" = { parse = "jupyter-cadquery==(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\D*)(?P<build>\\d*)" }

[tool.bdist_wheel]
universal = false
